deployments/pathweb/prowlarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: media-services
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  serviceName: prowlarr-headless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      runtimeClassName: gvisor
      containers:
      - name: prowlarr
        image: linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
